--- a/customer_success.ipynb
+++ b/customer_success.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1VszErm26wSpnH8pR2GAYSoKbijV1_Ijw",
-      "authorship_tag": "ABX9TyOzKhn9uAzaTAzkFMZugjFp",
+      "authorship_tag": "ABX9TyPF4GeZnxHwom5qQPXma0fe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,7 +105,7 @@
         "warnings.filterwarnings('ignore')\n",
         "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
         "# Loading the data\n",
         "cust_success=pd.read_excel('Data_Pathrise.xlsx')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
       "source": [
         "cust_success.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -343,7 +343,7 @@
       "source": [
         "cust_success.describe()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -478,7 +478,7 @@
         "\n",
         "cust_success.columns"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +514,7 @@
         "\n",
         "cust_success.isnull().sum()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -568,7 +568,7 @@
         "plt.ylabel(\"Number of Days\", fontsize=15)\n",
         "plt.show()\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -604,7 +604,7 @@
         "plt.ylabel(\"Number of Days\", fontsize=15)\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -645,7 +645,7 @@
         "ax[1].set_ylabel('No. of Applications')\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -686,7 +686,7 @@
         "ax[1].set_ylabel('No. of Interviews')\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -720,7 +720,7 @@
         "plt.ylabel('Frequency')\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -754,7 +754,7 @@
         "plt.ylabel('Frequency')\n",
         "plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -789,7 +789,7 @@
         "plt.ylabel('Frequency')\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -823,7 +823,7 @@
         "plt.ylabel('Frequency')\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -857,7 +857,7 @@
         "plt.ylabel('Frequency')\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -897,7 +897,7 @@
         "plt.ylabel('Frequency')\n",
         "plt.show()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -950,7 +950,7 @@
         "\n",
         "print(\"We lose almost {0}% of data by dropping the missing values.\".format(np.around((ori_len-miss_len)/ori_len*100)))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -993,7 +993,7 @@
         "\n",
         "df_1.head()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1188,7 +1188,7 @@
         "pred = kmeans.predict(x_test)\n",
         "print(classification_report(y_test, pred))\n"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,7 +1224,7 @@
         "pred = clf.predict(x_test)\n",
         "print(classification_report(y_test, pred))"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1263,7 +1263,7 @@
         "grid = GridSearchCV(clf, param_grid, cv=10, scoring='accuracy')\n",
         "grid.fit(x_train, y_train)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1311,7 +1311,7 @@
         "pred = grid.best_estimator_.predict(x_test)\n",
         "print(classification_report(y_test, pred))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1353,7 +1353,7 @@
         "x_train = pca.transform(x_train)\n",
         "x_test = pca.transform(x_test)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1369,7 +1369,7 @@
         "x_train = sc.fit_transform(x_train)\n",
         "x_test = sc.transform(x_test)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1403,7 +1403,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1465,7 +1465,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1517,7 +1517,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2130,6 +2130,37 @@
           "execution_count": 936
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "atHdi558Pwcr"
+      },
+      "source": [
+        "# Stratified K-fold cross-validation code\n",
+        "\n",
+        "features = list(train_df.columns[1:101])\n",
+        "\n",
+        "train_oof = np.zeros((250000,))\n",
+        "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+        "for fold, (train_idx, valid_idx) in enumerate(skf.split(train_df[features], train_df['loss'])):\n",
+        "    X_train, X_valid = train_df.iloc[train_idx], train_df.iloc[valid_idx]\n",
+        "    y_train = X_train['loss']\n",
+        "    y_valid = X_valid['loss']\n",
+        "    X_train = X_train.drop('loss', axis=1)\n",
+        "    X_valid = X_valid.drop('loss', axis=1)\n",
+        "    \n",
+        "    model = LinearRegression()\n",
+        "\n",
+        "    model =  model.fit(X_train, y_train)\n",
+        "    temp_oof = model.predict(X_valid)\n",
+        "    train_oof[valid_idx] = temp_oof\n",
+        "    print(f'Fold {fold} RMSE: ', mean_squared_error(y_valid, temp_oof, squared=False))\n",
+        "    \n",
+        "print(f'OOF Accuracy: ', mean_squared_error(train_df['loss'], train_oof, squared=False))\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
